--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ PORT=5000
 DB_NAME=online_store
 #DB_NAME=rsc1840
 DB_USER=postgres
-DB_PASSWORD=1305196613051966
+DB_PASSWORD=13051966
 DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=random_secret_key123
